add links to about me and contact me

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Index Portfolio</title>
+  <title>Niharika Portfolio</title>
 </head>
 
 <body>
@@ -13,9 +13,9 @@
   
  
   <hr />
-  <a href="">About Me</a>
+  <a href="./public/about.html">About Me</a>
   <h2><a href="./public/hobbies.html">My hobbies</a></h2>
-  <a href="">Contact Me</a>
+  <a href="./public/contact.html">Contact Me</a>
 </body>
 
 </html>
