--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -15,7 +15,12 @@
   <hr />
   <a href="./public/about.html">About Me</a>
   <h2><a href="./public/hobbies.html">My hobbies</a></h2>
+  <a href="./public/projects.html">Projects done</a>
+  <br/>
+  <a href="./public/skills.html">skills aquired</a>
+  <br/>
   <a href="./public/contact.html">Contact Me</a>
+  
 </body>
 
 </html>
