--- a/assignment2/doc5.html
+++ b/assignment2/doc5.html
@@ -36,7 +36,7 @@ label{
   
     <div class="flexContainer">
 
-    <div class="sidemargin"><h1>Let's chat</h1><br><br><br>
+    <div class="sidemargin"><h1 style="padding: 10% 0%">Let's chat</h1><br><br><br>
         <p>Ready to learn more about Omada Health<br> Employer solutions and how we can help you<br>
         and your employee population?</p><br>
         <p>
@@ -48,6 +48,15 @@ label{
           <br>
           <br>
           <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
           <img src="../img.png" class="one">
           <h2>omada</h2></div>
     <div>
@@ -55,24 +64,24 @@ label{
 
             <div>
                
-        <form action="">
+        <fieldset style="border: none;">
             <fieldset style="margin:50%">
                 <label  for="name">FIRST NAME*</label><br>
-                <input type="text" id="names" minlength="3" maxlength="30" required name="name" style="border-radius: 7px;"><br><br>
+                <input type="text" id="names" minlength="3" maxlength="30" required name="name" style="border-radius: 7px;padding:10px 50px"><br><br>
 
                 <label  for="name">LAST NAME*</label><br>
-                <input type="text" id="name" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;"><br><br>
+                <input type="text" id="name" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;padding:10px 50px"><br><br>
 
                 <label  for="name">COMPANY NAME*</label><br>
-                <input type="text" id="nam" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;"><br><br>
+                <input type="text" id="nam" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;padding:10px 50px"><br><br>
 
                 <label  for="name">COMPANY EMAIL*</label><br>
-                <input type="text" id="na" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;"><br><br>
+                <input type="text" id="na" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;padding:10px 50px"><br><br>
 
                 <label  for="name">PHONE NUMBER*</label><br>
-                <input type="text" id="n" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;"><br><br>
+                <input type="text" id="n" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;padding:10px 50px"><br><br>
 
-                <label for="state">STATE*:</label><br><input type placeholder="SELECT"style="border-radius: 7px;"><br><br>
+                <label for="state">STATE*:</label><br><input type placeholder="SELECT"style="border-radius: 7px;padding:10px 50px"><br><br>
                 <select name="" id="state">
                     <option value=" ">MAHARASHTRA</option>
                     <option value=" ">TELANGANA</option>
@@ -80,11 +89,11 @@ label{
                     <option value=" ">MP</option>
                     <option value=" ">UP</option></select><br></br>
 
-                    <label for="employees">Number of Employees*</label><br>
-                    <input type="number" id="employees" name="employees" required style="border-radius: 7px;"><br><br>
+                    <label for="employees">NUMBER OF EMPLOYEES*</label><br>
+                    <input type="number" id="employees" name="employees" required style="border-radius: 7px;padding:10px 50px"><br><br>
 
                 <label  for="name">I'M INTERESTED IN:*</label><br>
-                <input type="text" id="name" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;"><br><br>
+                <input type="text" id="name" minlength="3" maxlength="30" required name="name"style="border-radius: 7px;padding:10px 50px"><br><br>
 </fieldset>
 </form>
 </center>
